--- a/src/pages/docs/border-opacity.mdx
+++ b/src/pages/docs/border-opacity.mdx
@@ -11,7 +11,7 @@ export const classes = { plugin }
 
 ## Usage
 
-Control the opacity of an element's border color using the `.border-opacity-{amount}` utilities.
+Control the opacity of an element's border color using the `border-opacity-{amount}` utilities.
 
 ```html
 <template preview class="bg-checkered p-4">
