--- a/src/pages/docs/divide-opacity.mdx
+++ b/src/pages/docs/divide-opacity.mdx
@@ -16,7 +16,7 @@ export const classes = {
 
 ## Usage
 
-Control the opacity of borders between elements using the `.divide-opacity-{amount}` utilities.
+Control the opacity of borders between elements using the `divide-opacity-{amount}` utilities.
 
 ```html
 <template preview class="bg-checkered p-4">
