--- a/src/pages/docs/hover-focus-and-other-states.mdx
+++ b/src/pages/docs/hover-focus-and-other-states.mdx
@@ -4,7 +4,6 @@ description: Using utilities to style elements on hover, focus, and more.
 ---
 
 import { Heading } from '@/components/Heading'
-import { ResponsiveCodeSample } from '@/components/ResponsiveCodeSample'
 import { TipCompat } from '@/components/Tip'
 import { DefaultVariantsConfig } from '@/components/DefaultVariantsConfig'
 import { VariantEnabledList } from '@/components/VariantEnabledList'
@@ -141,7 +140,7 @@ module.exports = {
 
 ## Group-hover
 
-If you need to style a child element when hovering over a specific parent element, add the `.group` class to the parent element and add the `group-hover:` prefix to the utility on the child element.
+If you need to style a child element when hovering over a specific parent element, add the `group` class to the parent element and add the `group-hover:` prefix to the utility on the child element.
 
 ```html
 <template preview class="bg-gray-200 p-8">
