--- a/src/pages/docs/list-style-type.mdx
+++ b/src/pages/docs/list-style-type.mdx
@@ -11,7 +11,6 @@ features:
 import plugin from 'tailwindcss/lib/plugins/listStyleType'
 import { Variants } from '@/components/Variants'
 import { Disabling } from '@/components/Disabling'
-import { ResponsiveCodeSample } from '@/components/ResponsiveCodeSample'
 
 export const classes = { plugin }
 
@@ -66,27 +65,17 @@ To create bulleted or numeric lists, use the `list-disc` and `list-decimal` util
 
 ## Responsive
 
-To control the list style type of a list element at a specific breakpoint, add a `{screen}:` prefix to any existing list utility. For example, use `.md:list-disc` to apply the `.list-disc` utility at only medium screen sizes and above.
+To control the list style type of a list element at a specific breakpoint, add a `{screen}:` prefix to any existing list utility. For example, use `.md:list-disc` to apply the `list-disc` utility at only medium screen sizes and above.
 
 For more information about Tailwind's responsive design features, check out the [Responsive Design](/docs/responsive-design) documentation.
 
-<ResponsiveCodeSample
-  classNames={['list-none', 'list-disc', 'list-decimal', 'list-disc', 'list-none']}
-  snippet={(classNames) => `
-    <ul class="${classNames}">
-      <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit</li>
-      <li>Assumenda, quia temporibus eveniet a libero incidunt suscipit</li>
-      <li>Quidem, ipsam illum quis sed voluptatum quae eum fugit earum</li>
-    </ul>
-  `}
-  preview={(className) => (
-    <ul className={`list-inside ${className}`}>
-      <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit</li>
-      <li>Assumenda, quia temporibus eveniet a libero incidunt suscipit</li>
-      <li>Quidem, ipsam illum quis sed voluptatum quae eum fugit earum</li>
-    </ul>
-  )}
-/>
+```html
+<ul class="list-none **md:list-disc**">
+  <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit</li>
+  <li>Assumenda, quia temporibus eveniet a libero incidunt suscipit</li>
+  <li>Quidem, ipsam illum quis sed voluptatum quae eum fugit earum</li>
+</ul>
+```
 
 ## Customizing
 
