--- a/src/pages/docs/opacity.mdx
+++ b/src/pages/docs/opacity.mdx
@@ -17,7 +17,7 @@ export const classes = { plugin }
 
 ## Usage
 
-Control the opacity of an element using the `.opacity-{amount}` utilities.
+Control the opacity of an element using the `opacity-{amount}` utilities.
 
 ```html
 <template preview>
