--- a/src/pages/docs/placeholder-color.mdx
+++ b/src/pages/docs/placeholder-color.mdx
@@ -31,7 +31,7 @@ export const classes = {
 
 ## Usage
 
-Control the placeholder color of an element using the `.placeholder-{color}` utilities.
+Control the placeholder color of an element using the `placeholder-{color}` utilities.
 
 ```html
 <template preview class="text-center p-6">
@@ -47,7 +47,7 @@ Control the placeholder color of an element using the `.placeholder-{color}` uti
 
 ### Changing opacity
 
-Control the opacity of an element's placeholder color using the `.placeholder-opacity-{amount}` utilities.
+Control the opacity of an element's placeholder color using the `placeholder-opacity-{amount}` utilities.
 
 ```html
 <template preview>
