--- a/src/pages/docs/placeholder-opacity.mdx
+++ b/src/pages/docs/placeholder-opacity.mdx
@@ -14,7 +14,7 @@ export const classes = {
 
 ## Usage
 
-Control the opacity of an element's placeholder color using the `.placeholder-opacity-{amount}` utilities.
+Control the opacity of an element's placeholder color using the `placeholder-opacity-{amount}` utilities.
 
 ```html
 <template preview>
