--- a/src/pages/docs/text-align.mdx
+++ b/src/pages/docs/text-align.mdx
@@ -18,7 +18,7 @@ export const classes = { plugin }
 
 ## Usage
 
-Control the text alignment of an element using the `.text-left`, `.text-center`, `.text-right`, and `.text-justify` utilities.
+Control the text alignment of an element using the `text-left`, `.text-center`, `.text-right`, and `.text-justify` utilities.
 
 ```html
 <template preview>
