--- a/src/pages/docs/text-color.mdx
+++ b/src/pages/docs/text-color.mdx
@@ -30,7 +30,7 @@ export const classes = {
 
 ## Usage
 
-Control the text color of an element using the `.text-{color}` utilities.
+Control the text color of an element using the `text-{color}` utilities.
 
 ```html
 <template preview class="text-center p-4">
@@ -44,7 +44,7 @@ Control the text color of an element using the `.text-{color}` utilities.
 
 ### Changing opacity
 
-Control the opacity of an element's text color using the `.text-opacity-{amount}` utilities.
+Control the opacity of an element's text color using the `text-opacity-{amount}` utilities.
 
 ```html
 <template preview>
