--- a/src/pages/docs/align-self.mdx
+++ b/src/pages/docs/align-self.mdx
@@ -4,7 +4,6 @@ description: "Utilities for controlling how an individual flex or grid item is p
 ---
 
 import plugin from 'tailwindcss/lib/plugins/alignSelf'
-import { ResponsiveCodeSample } from '@/components/ResponsiveCodeSample'
 import { Variants } from '@/components/Variants'
 import { Disabling } from '@/components/Disabling'
 
@@ -86,23 +85,13 @@ To control the alignment of a flex item at a specific breakpoint, add a `{screen
 
 For more information about Tailwind's responsive design features, check out the [Responsive Design](/docs/responsive-design) documentation.
 
-<ResponsiveCodeSample
-  classNames={['self-auto', 'self-start', 'self-end', 'self-center', 'self-stretch']}
-  snippet={(classNames) => `
-    <div class="items-stretch ...">
-      <!-- ... -->
-      <div class="${classNames} ...">2</div>
-      <!-- ... -->
-    </div>
-  `}
-  preview={(className) => (
-    <div className="flex items-stretch bg-gray-200 h-24">
-      <div className="flex-1 text-gray-700 text-center bg-gray-400 px-4 py-2 m-2">1</div>
-      <div className={`flex-1 text-gray-800 text-center bg-gray-500 px-4 py-2 m-2 ${className}`}>2</div>
-      <div className="flex-1 text-gray-700 text-center bg-gray-400 px-4 py-2 m-2">3</div>
-    </div>
-  )}
-/>
+```html
+<div class="items-stretch ...">
+  <div class="self-auto **md:self-end** ...">
+    <!-- ... -->
+  </div>
+</div>
+```
 
 ## Customizing
 
