--- a/src/pages/docs/background-attachment.mdx
+++ b/src/pages/docs/background-attachment.mdx
@@ -9,7 +9,6 @@ features:
 ---
 
 import plugin from 'tailwindcss/lib/plugins/backgroundAttachment'
-import { ResponsiveCodeSample } from '@/components/ResponsiveCodeSample'
 import { Variants } from '@/components/Variants'
 import { Disabling } from '@/components/Disabling'
 
@@ -63,24 +62,11 @@ To control the background attachment of an element at a specific breakpoint, add
 
 For more information about Tailwind's responsive design features, check out the [Responsive Design](/docs/responsive-design) documentation.
 
-<ResponsiveCodeSample
-  classNames={['bg-fixed', 'bg-local', 'bg-scroll', 'bg-local', 'bg-fixed']}
-  snippet={(classNames) => `
-    <div class="${classNames} ...">
-      <!-- ... -->
-    </div>
-  `}
-  preview={(className => (
-    <div
-      className={`w-full h-48 bg-center overflow-y-scroll ${className}`}
-      style={{
-        backgroundImage: `url('https://images.unsplash.com/photo-1459262838948-3e2de6c1ec80?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=80')`
-      }}
-    >
-      <div className="h-64"></div>
-    </div>
-  ))}
-/>
+```html
+<div class="bg-local **md:bg-fixed** ...">
+  <!-- ... -->
+</div>
+```
 
 ## Customizing
 
