--- a/src/pages/docs/background-image.mdx
+++ b/src/pages/docs/background-image.mdx
@@ -4,7 +4,6 @@ description: "Utilities for controlling an element's background image."
 ---
 
 import plugin from 'tailwindcss/lib/plugins/backgroundImage'
-import { ResponsiveCodeSample } from '@/components/ResponsiveCodeSample'
 import { Heading } from '@/components/Heading'
 import { Variants } from '@/components/Variants'
 import { Disabling } from '@/components/Disabling'
@@ -26,7 +25,7 @@ To give an element a linear gradient background, use one of the `bg-gradient-{di
 To control the background image of an element at a specific breakpoint, add a `{screen}:` prefix to any existing background image utility. For example, use `md:bg-gradient-to-r` to apply the `bg-gradient-to-r` utility at only medium screen sizes and above.
 
 ```html
-<div class="bg-gradient-to-r md:bg-gradient-to-t ..."></div>
+<div class="bg-gradient-to-l **md:bg-gradient-to-r** ..."></div>
 ```
 
 For more information about Tailwind's responsive design features, check out the [Responsive Design](/docs/responsive-design) documentation.
