--- a/src/pages/docs/background-opacity.mdx
+++ b/src/pages/docs/background-opacity.mdx
@@ -11,7 +11,7 @@ export const classes = { plugin }
 
 ## Usage
 
-Control the opacity of an element's background color using the `.bg-opacity-{amount}` utilities.
+Control the opacity of an element's background color using the `bg-opacity-{amount}` utilities.
 
 ```html
 <template preview class="bg-checkered p-4">
