--- a/src/pages/docs/background-size.mdx
+++ b/src/pages/docs/background-size.mdx
@@ -11,7 +11,6 @@ features:
 import plugin from 'tailwindcss/lib/plugins/backgroundSize'
 import { Variants } from '@/components/Variants'
 import { Disabling } from '@/components/Disabling'
-import { ResponsiveCodeSample } from '@/components/ResponsiveCodeSample'
 
 export const classes = { plugin }
 
@@ -60,20 +59,9 @@ To control the size of an element's background image at a specific breakpoint, a
 
 For more information about Tailwind's responsive design features, check out the [Responsive Design](/docs/responsive-design) documentation.
 
-<ResponsiveCodeSample
-  classNames={['bg-auto', 'bg-cover', 'bg-contain', 'bg-auto', 'bg-cover']}
-  snippet={(classNames) => `
-    <div class="${classNames} ..." style="background-image: url(...)"></div>
-  `}
-  preview={(className) => (
-    <div
-      className={`mx-auto w-64 bg-gray-400 h-48 bg-center bg-no-repeat ${className}`}
-      style={{
-        backgroundImage: `url('https://images.unsplash.com/photo-1459262838948-3e2de6c1ec80?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=80')`
-      }}
-    />
-  )}
-/>
+```html
+<div class="bg-auto **md:bg-contain** ..."></div>
+```
 
 ## Customizing
 
