--- a/src/pages/docs/border-style.mdx
+++ b/src/pages/docs/border-style.mdx
@@ -11,7 +11,6 @@ features:
 import plugin from 'tailwindcss/lib/plugins/borderStyle'
 import { Variants } from '@/components/Variants'
 import { Disabling } from '@/components/Disabling'
-import { ResponsiveCodeSample } from '@/components/ResponsiveCodeSample'
 
 export const classes = { plugin }
 
@@ -63,16 +62,9 @@ To control the border style of an element at a specific breakpoint, add a `{scre
 
 For more information about Tailwind's responsive design features, check out the [Responsive Design](/docs/responsive-design) documentation.
 
-<ResponsiveCodeSample
-  classNames={['border-solid', 'border-dashed', 'border-dotted', 'border-double', 'border-none']}
-  snippet={(classNames) => `
-    <div class="${classNames}">
-    </div>
-  `}
-  preview={(className) => (
-    <div className={`w-24 h-24 mx-auto border-8 border-gray-600 bg-gray-400 ${className}`} />
-  )}
-/>
+```html
+<div class="border-solid **md:border-dotted** ..."></div>
+```
 
 ## Customizing
 
