--- a/src/pages/docs/text-opacity.mdx
+++ b/src/pages/docs/text-opacity.mdx
@@ -12,7 +12,7 @@ export const classes = { plugin }
 
 ## Usage
 
-Control the opacity of an element's text color using the `.text-opacity-{amount}` utilities.
+Control the opacity of an element's text color using the `text-opacity-{amount}` utilities.
 
 ```html
 <template preview>
