--- a/src/pages/docs/text-transform.mdx
+++ b/src/pages/docs/text-transform.mdx
@@ -17,7 +17,7 @@ export const classes = { plugin }
 
 ## Normal Case
 
-Use the `.normal-case` utility to preserve the original casing. This is typically used to reset capitalization at different breakpoints.
+ `Use the `normal-case` utility to preserve the original casing. This is typically used to reset capitalization at different breakpoints.
 
 ```html
 <template preview>
@@ -29,7 +29,7 @@ Use the `.normal-case` utility to preserve the original casing. This is typicall
 
 ## Uppercase
 
-Use the `.uppercase` utility to uppercase text.
+ `Use the `uppercase` utility to uppercase text.
 
 ```html
 <template preview>
@@ -41,7 +41,7 @@ Use the `.uppercase` utility to uppercase text.
 
 ## Lowercase
 
-Use the `.lowercase` utility to lowercase text.
+ `Use the `lowercase` utility to lowercase text.
 
 ```html
 <template preview>
@@ -53,7 +53,7 @@ Use the `.lowercase` utility to lowercase text.
 
 ## Capitalize
 
-Use the `.capitalize` utility to capitalize text.
+ `Use the `capitalize` utility to capitalize text.
 
 ```html
 <template preview>
